Debugged the images source.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
       <img
         class="main-img"
-        src="/images/main-img.svg"
+        src="./images/main-img.svg"
         alt="Vector image of a woman inserting pins into a globe."
       />
 
@@ -55,7 +55,7 @@
 
     <img
       class="wavy-img"
-      src="/images/Wave.png"
+      src="./images/Wave.png"
       alt="A wavy image decoration."
     />
   </body>
